<resources>

    <string name="app_name">Kisaan Sewa</string>

    <!--Authentication-->
    <string name="name_view">Name</string>
    <string name="area_view">Area</string>
    <string name="city_view">City</string>
    <string name="state_view">State</string>
    <string name="conf_password_view">Confirm Password</string>
    <string name="register_view">REGISTER</string>
    <string name="mobile_no_view">Mobile No</string>
    <string name="password_view">Password</string>
    <string name="login_view">Login</string>
    <string name="not_registered_yet_view">Not Registered Yet?</string>
    <string name="register_here_view">Register Here!</string>

    <!--Dummy Values-->
    <string name="cropName">Bajra</string>
    <string name="cropPrice">70</string>
    <string name="cropQuantity">500</string>
    <string name="cropQuantity_rem">75 kgs remaining</string>
    <string name="name">Rohit Agrawal</string>
    <string name="mobileNo">9039888667</string>
    <string name="city">Raipur</string>
    <string name="state">Chattisgarh</string>
    <string name="area">Swarnabhoomi</string>
    <string name="address">Swarnabhoomi, Raipur, Chattisgarh</string>

    <!--View text-->
    <string name="seller_details">View Seller</string>
    <string name="buyer_details">View Buyer</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="quantity_purchased">Quantity sold (in kgs)</string>
    <string name="order_quantity_sold">kgs at Rs. </string>
    <string name="add_product">Add Crop</string>
    <string name="seller_details_head">Seller Details:</string>
    <string name="quantity_available">Quantity Available: </string>
    <string name="available">Available: </string>
    <string name="distance_from_current">Find Distance from your current location</string>
    <string name="distance_from_address">Find Distance from your address</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No Internet Connection</string>


    <!--HARDCODED STRINGS-->
    <string name="per_kg">/kg</string>
    <string name="kg">kg</string>
    <string name="kgs">kgs</string>
    <string name="add">Add</string>
    <string name="kg_close_bracket">kg )</string>
    <string name="rs">Rs.</string>
    <string name="open_bracket_available">( Available:</string>
    <string name="requested">Requested</string>
    <string name="at_rs">at Rs.</string>
    <string name="no_route_addr">No route found from your given address</string>
    <string name="no_route_curr">No route found from your current location</string>
    <string name="dist_head">Distance:</string>
    <string name="dist_addr">From given address: </string>
    <string name="dist_curr">From current location: </string>
    <string name="out_of">out of</string>
    <string name="add_first_crop">Click below to add your first crop! </string>
    <string name="no_crops_to_sell">You do not have any crops to sell.</string>
    <string name="no_crops_to_buy">There are currently no crops to buy.</string>
    <string name="no_requests">You do not have any requests yet.</string>
    <string name="no_orders">You do not have any orders yet.</string>
    <string name="to">To:</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket"> )</string>

    <!--LANGUAGE-->
    <string name="choose_language"><u>Choose language</u></string>
    <string name="choose_language_dialog">Choose any language</string>
    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
        <item>Marathi</item>
        <item>Punjabi</item>
        <item>Sindhi</item>
        <item>Tamil</item>
        <item>Telugu</item>
    </string-array>

    <!--FONT AWESOME STRINGS-->
    <string name="icon_user">&#xf007;</string>
    <string name="icon_mobile_no">&#xf2b9;</string>
    <string name="icon_area">&#xf21d;</string>
    <string name="icon_city">&#xf1ad;</string>
    <string name="icon_state">&#xf286;</string>

    <!--Tab names-->
    <string name="tab_buy">Buy Crops</string>
    <string name="tab_sell">Sell Crops</string>

    <string name="tab_purchased">Purchased</string>
    <string name="tab_sold">Sold</string>
    <string name="tab_confirm_product_buy">Product Details</string>

    <string name="tab_purchase_req">Purchase Requests</string>
    <string name="tab_sell_req">Sell Requests</string>

    <string name="tab_orders">My Orders</string>


    <!--View names-->

    <!--SNACK MESSAGES-->

    <string name="something_went_wrong">Oops! Something went wrong!</string>
    <string name="check_network_connection">Please check your Internet connection!</string>
    <string name="unable_to_process_request">Unable to process your request at the moment!</string>
    <string name="cannot_connect_to_server">Unable to connect to server at the moment!</string>
    <string name="enter_all_details">Enter All Details!!</string>
    <string name="passwords_do_not_match">Passwords do not Match!!</string>
    <string name="quantity_cannot_be_zero">Quantity cannot be zero!</string>
    <string name="permission_required">You need to grant us permission</string>

    <!--login-->
    <string name="login_details_enter_first">Enter Mobile No/Password First!!</string>
    <string name="login_invalid_credentials">Invalid User Credentials</string>

    <!--sign up-->
    <string name="signup_valid_no">Enter a valid Mobile No!!</string>
    <string name="signup_already_registered">User already registered</string>

    <!--Sell products-->
    <string name="sell_product_dialog_adding_new_crop">Adding new crop ..</string>
    <string name="sell_product_dialog_deleting_crop">Deleting crop .. </string>
    <string name="sell_product_kgs_remaining">kgs remaining</string>

    <string name="sell_products_item_deleted">Item Deleted</string>

    <string name="sell_product_crop_exists">Crop already exists, try some another name!</string>
    <string name="sell_product_field_cannot_empty">Field cannot be empty!!</string>
    <string name="sell_product_delete_product"> Delete Product</string>
    <string name="sell_product_sure_to_delete">Are you sure you want to delete this product!</string>
    <string name="sell_product_edit_product"> Edit Product</string>
    <string name="sell_product_product_name">Product Name</string>
    <string name="sell_product_product_price">Product Price (In Rs)</string>
    <string name="sell_product_product_quantity">Product Quantity(In kg)</string>

    <!--Confirm product buy-->
    <string name="confirm_buy_find_distance">Find Distance</string>
    <string name="confirm_buy_request_product">Request Product</string>
    <string name="confirm_buy_dialog_creating_request">Creating your request  ..</string>
    <string name="confirm_buy_dialog_confirm_product">Confirm Product</string>
    <string name="confirm_buy_dialog_calculating_distance">Calculating  distance ..</string>
    <string name="confirm_buy_request_made">Request successfully made!</string>
    <string name="confirm_buy_sure_to_request">Are you sure you want to request this product!</string>
    <string name="confirm_buy_price">Price : Rs.</string>
    <string name="confirm_buy_already_requested">You have already requested this crop!</string>

    <!--Requests-->
    <string name="request_sure_to_cancel">Are you sure you want to cancel this request?</string>
    <string name="request_dialog_confirming_order">Confirming your order ..</string>
    <string name="request_order_confirmed">Your order is confirmed!</string>
    <string name="request_enter_quantity">Enter Quantity</string>
    <string name="request_quantity_cannot_zero">Quantity cannot be zero</string>
    <string name="request_quantity_cannot_empty">Quantity cannot be empty</string>
    <string name="request_enter_valid_quantity">Enter a valid quantity</string>

    <!--Menu items-->
    <string name="menu_market_status">Market Status</string>
    <string name="menu_purchase_req">Purchase Requests</string>
    <string name="menu_sell_req">Sell Requests</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_edit_prof">My Profile</string>
    <string name="menu_logout">Logout</string>

    <!--new updates-->
    <string name="add_product_valid_name_enter">*Enter a valid crop name</string>
    <string name="confirm_buy_see_directions">See Directions</string>
    <string name="tab_edit_profile">Edit Profile</string>
    <string name="action_done"> </string>
    <string name="search">Search crops</string>
    <string name="update">Update</string>
    <string name="profile_updated">Profile successfully updated</string>
    <string name="profile_updating">Updating your profile .. </string>
    <string name="password_updating">Updating your password .. </string>
    <string name="password_updated">Password updated successfully</string>
    <string name="wrong_password">You entered a wrong password!</string>
    <string name="change_language">Change Language:</string>
    <string name="change_password">Change Password:</string>
    <string name="edit_profile_old_paswrd">Enter Old Password:</string>
    <string name="edit_profile_new_paswrd">Enter New Password:</string>
    <string name="edit_profile_conf_new_paswrd">Confirm New Password:</string>
    <string name="edit_profile_personal_details_head">Personal Details:</string>

    <string name="lang_en">English</string>
    <string name="lang_hi">Hindi</string>
    <string name="lang_mr">Marathi</string>
    <string name="lang_pa">Punjabi</string>
    <string name="lang_sd">Sindhi</string>
    <string name="lang_ta">Tamil</string>
    <string name="lang_te">Telugu</string>

    <string name="select_picture">Select Picture</string>
    <string name="edit_photo">Edit Photo</string>

    <string name="bottom_nav_buy">Buy</string>
    <string name="bottom_nav_sell">Sell</string>
    <string name="bottom_nav_market">Market</string>

    <string name="click_first_crop">Click here to add your first crop</string>

    <string name="sellers">sellers</string>
    <string name="seller">seller</string>
    <string name="no_sellers">There are no sellers currently!</string>


    <string name="crop_detail_image">Crop Image</string>
</resources>
