<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_marginBottom="2dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="12dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!--Crop Details-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cropName"
                    android:textSize="25sp"
                    android:padding="2dp"
                    android:id="@+id/order_cropName"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/open_bracket"
                    android:textSize="17sp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cropQuantity"
                    android:textSize="17sp"
                    android:id="@+id/order_cropQuantity"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/order_quantity_sold"
                    android:textSize="17sp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cropPrice"
                    android:textSize="17sp"
                    android:gravity="bottom"
                    android:id="@+id/order_cropPrice"
                    android:paddingBottom="5dp"
                    android:textStyle="italic"
                    android:layout_marginStart="2dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/per_kg"
                    android:textSize="17sp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:textStyle="italic"
                    android:layout_marginStart="1dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/close_bracket"
                    android:textSize="17sp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:layout_marginStart="7dp"
                    android:id="@+id/order_farmerName"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_bracket"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textStyle="italic"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobileNo"
                    android:textSize="18sp"
                    android:layout_marginStart="2dp"
                    android:textStyle="italic"
                    android:id="@+id/order_farmerNo"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_bracket"
                    android:textSize="18sp"
                    android:layout_marginStart="2dp"
                    android:textStyle="italic"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginStart="7dp"
                android:textSize="18sp"
                android:layout_marginBottom="3dp"
                android:id="@+id/order_farmerAddress"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="5dp"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/card_order_phone"
                    app:cardElevation="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimary"
                        android:padding="5dp"
                        android:background="@drawable/boundary_primary_rect"
                        android:id="@+id/call_farmer"
                        />


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    android:id="@+id/card_cancelRequest_purchaseRequest"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/yellow_msg"
                        android:padding="5dp"
                        android:background="@drawable/boundary_yellow_rect"
                        android:id="@+id/message_farmer"
                        />

                </android.support.v7.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>