<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="#348E17"-->
        <!--android:text="PRODUCT DETAILS"-->
        <!--android:id="@+id/textView"-->
        <!--android:textColor="#FFF"-->
        <!--style="@style/Base.TextAppearance.AppCompat.Title"-->
        <!--android:textStyle="bold"/>-->

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/sell_product_product_name"
        android:inputType="text"
        android:gravity="bottom"
        android:id="@+id/productNameDialog"
        android:layout_marginStart="5dp">

        <requestFocus/>
    </AutoCompleteTextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sell_product_product_price"
        android:inputType="numberDecimal"
        android:gravity="bottom"
        android:id="@+id/productPriceDialog"
        android:layout_marginStart="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productQuantityDialog"
        android:gravity="bottom"
        android:hint="@string/sell_product_product_quantity"
        android:inputType="numberDecimal"
        android:layout_marginStart="5dp"/>


</LinearLayout>